--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,24 +1,26 @@
+
+# Spring Boot configuration
+spring:
+# Database
+  datasource:
+    initialization-mode: always
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/gb_challenge
+    username: postgres
+    password: 123456
+# JPA properties
+  jpa:
+    properties:
+      hibernate:
+        default_schema: public
+        formatSql: true
+    hibernate:
+      ddl-auto: create-drop
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    show-sql: true
+    generate-ddl: true
 # Server configuration
 server:
   port: 8082
   servlet:
     context-path: /challenge/api
-# Spring Boot configuration
-spring:
-  profiles:
-    active: development
-# Database
-  datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/gb_challenge?createDatabaseIfNotExist=true
-    username: postgres
-    password: 123456
-# JPA properties
-  jpa:
-    hibernate:
-      ddl-auto: create
-    show-sql: true
-    database: gb_challenge
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-    open-in-view: false
-    generate-ddl: false
