--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<!-- ModelMapper -->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 		<!-- Persistence API -->
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
