--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
 			<artifactId>modelmapper</artifactId>
 			<version>2.3.0</version>
 		</dependency>
+		<!-- Rx Java -->
+		<dependency>
+			<groupId>io.reactivex.rxjava2</groupId>
+			<artifactId>rxjava</artifactId>
+			<version>2.2.2</version>
+		</dependency>
 		<!-- Persistence API -->
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
