--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - postgres
   postgres:
     image: postgres:11
-    container_name: gb_postgres
+    container_name: postgres
     restart: always
     environment:
       POSTGRES_DB: gb_challenge
@@ -23,7 +23,7 @@ services:
     volumes:
       - "postgres:/var/lib/postgresql/data"
     ports:
-      - 5432:5432
+      - 5433:5432
 volumes:
   postgres:
     name: gb_challenge
